# maya-learn-helper

./: .env  .env.example  .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml
src/plugins/myplugin/: __init__.py  qq_authorization.py
src/plugins/nonebot_plugin_maya_learn_helper/: random.py
